# file_management

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml  lint.yml  terraform.yml
file_management/: app.py  main.py
terraform/: README.md  backend.tf
tests/: test_file_management.py
