[tool.poetry]
name = "file_management"
version = "0.1.0"
description = "Test microservice to pull down and serve a file"
authors = ["Andrew Imeson <andrew@andrewimeson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
fastapi = "^0.78.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
